update for debug

--- a/configs/train_lm.yaml
+++ b/configs/train_lm.yaml
@@ -94,7 +94,7 @@ lightning:
         disabled: false
   trainer:
     benchmark: True
-    devices: 8
+    devices: 1
     num_nodes: 1
-    strategy: ddp
+    #strategy: ddp
     # strategy: ddp_find_unused_parameters_true
