--- a/configs/train_lm.yaml
+++ b/configs/train_lm.yaml
@@ -50,7 +50,7 @@ data:
   params:
     batch_size_music_motion: 3
     batch_size_caption: 8
-    batch_size: None
+    batch_size: 8
     wrap: True
     num_workers: 4
     train:
